# auracv

./: .env.template  .gitignore  .vercelignore  LICENSE  README.md  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts
backend/: .dockerignore  .env.template  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: health.py  resume.py
backend/app/clients/: llama_client.py  openai_client.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/schemas/: __init__.py  profile.py  requests.py
backend/app/services/: extraction.py  pdf.py
backend/app/workflows/: __init__.py  profile.py
backend/tests/: conftest.py  test_health.py  test_pdf.py  test_resume_endpoints.py  test_schemas.py  test_workflow.py
public/: llms.txt
src/: CommonContext.tsx  Common_context.tsx  proxy.ts
src/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts  sitemap.xml
src/app/auracv/: page.tsx
src/app/create/: create-client.tsx  page.tsx
src/app/download-wrapped/: page.tsx
src/components/: HackathonCard.tsx  ProjectCard.tsx  ResumeTemplate.tsx  award-card.tsx  education-card.tsx  hackathon-card.tsx  project-card.tsx  resume-card.tsx
src/config/: site.ts
src/data/: resume.json  resume.tsx
src/lib/: public-profile.ts  resume-docx.ts  type.ts  user.types.ts  utils.ts
src/utils/: authProtect.tsx
supabase/: schema.sql  storage-policies.sql
(+80 files in other folders)
